force-app/main/default/objects/Ticket__c/fields/Aassigners__c.field-meta.xml
<CustomField>
    <fullName>Aassigners__c</fullName>
    <label>Aassigners</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>