force-app/main/default/objects/Ticket__c/fields/As_of_Yesterday__c.field-meta.xml
<CustomField>
    <fullName>As_of_Yesterday__c</fullName>
    <formula>DueDate__c &lt;  TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>As of Yesterday</label>
    <type>Checkbox</type>
</CustomField>