force-app/main/default/objects/Ticket__c/fields/AssignedTo__c.field-meta.xml
<CustomField>
    <fullName>AssignedTo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>工单指派人</description>
    <label>Assigned To</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Tickets</relationshipName>
    <type>Lookup</type>
</CustomField>