force-app/main/default/objects/Ticket__c/fields/Check_X_Plan__c.field-meta.xml
<CustomField>
    <fullName>Check_X_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Check X Plan</label>
    <referenceTo>Check_X_Plan__c</referenceTo>
    <relationshipLabel>Tickets</relationshipLabel>
    <relationshipName>Tickets</relationshipName>
    <type>Lookup</type>
</CustomField>