force-app/main/default/objects/Ticket__c/fields/CheckItem__c.field-meta.xml
<CustomField>
    <fullName>CheckItem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Check Item</label>
    <referenceTo>CheckItem__c</referenceTo>
    <relationshipLabel>Tickets</relationshipLabel>
    <relationshipName>Tickets</relationshipName>
    <type>Lookup</type>
</CustomField>