force-app/main/default/objects/Ticket__c/fields/CheckResult__c.field-meta.xml
<CustomField>
    <fullName>CheckResult__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Check Result</label>
    <referenceTo>CheckResult__c</referenceTo>
    <relationshipLabel>Tickets</relationshipLabel>
    <relationshipName>Tickets</relationshipName>
    <type>Lookup</type>
</CustomField>