force-app/main/default/objects/Ticket__c/fields/ClosedDailyInspectionReport__c.field-meta.xml
<CustomField>
    <fullName>ClosedDailyInspectionReport__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Closed Daily Inspection Report</label>
    <referenceTo>Daily_Inspection_Report__c</referenceTo>
    <relationshipLabel>Tickets (Closed Daily Inspection Report)</relationshipLabel>
    <relationshipName>Tickets098</relationshipName>
    <type>Lookup</type>
</CustomField>