force-app/main/default/objects/Ticket__c/fields/Created_By_Role__c.field-meta.xml
<CustomField>
    <fullName>Created_By_Role__c</fullName>
    <description>区分南非第三方用户</description>
    <formula>CreatedBy.CompanyName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created By Role(Company)</label>
    <type>Text</type>
</CustomField>