force-app/main/default/objects/Ticket__c/fields/DueDate__c.field-meta.xml
<CustomField>
    <fullName>DueDate__c</fullName>
    <description>工单到期日</description>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>