force-app/main/default/objects/Ticket__c/fields/Histories_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Histories_Feedback__c</fullName>
    <description>工单的历史反馈记录</description>
    <label>Histories Feedback</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>