force-app/main/default/objects/Ticket__c/fields/Inspection_Status__c.field-meta.xml
<CustomField>
    <fullName>Inspection_Status__c</fullName>
    <label>Inspection Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>