force-app/main/default/objects/Ticket__c/fields/InspectionReport__c.field-meta.xml
<CustomField>
    <fullName>InspectionReport__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inspection Report</label>
    <referenceTo>Daily_Inspection_Report__c</referenceTo>
    <relationshipLabel>Tickets</relationshipLabel>
    <relationshipName>Tickets</relationshipName>
    <type>Lookup</type>
</CustomField>