force-app/main/default/objects/Ticket__c/fields/isMine__c.field-meta.xml
<CustomField>
    <fullName>isMine__c</fullName>
    <formula>CreatedById == $User.Id || Owner:User.Id == $User.Id ||  AssignedTo__c == $User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>isMine</label>
    <type>Checkbox</type>
</CustomField>