force-app/main/default/objects/Ticket__c/fields/Newest_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Newest_Feedback__c</fullName>
    <label>Newest Feedback</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>