force-app/main/default/objects/Ticket__c/fields/Product_Id__c.field-meta.xml
<CustomField>
    <fullName>Product_Id__c</fullName>
    <label>Product Id</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>