force-app/main/default/objects/Ticket__c/fields/Product_Line__c.field-meta.xml
<CustomField>
    <fullName>Product_Line__c</fullName>
    <inlineHelpText>If the selected product model does not maintain the corresponding product line, the product line is empty.</inlineHelpText>
    <label>Product Line</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Product_Line</valueSetName>
    </valueSet>
</CustomField>