force-app/main/default/objects/Ticket__c/fields/Promoter_Status__c.field-meta.xml
<CustomField>
    <fullName>Promoter_Status__c</fullName>
    <label>Promoter Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>