force-app/main/default/objects/Ticket__c/fields/PromoterDailyReport__c.field-meta.xml
<CustomField>
    <fullName>PromoterDailyReport__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>促销员日报编码（由促销员日报创建的工单有编码，否则为空）</description>
    <label>Promoter Daily Report</label>
    <referenceTo>Promoter_Daily_Report__c</referenceTo>
    <relationshipLabel>New Tickets</relationshipLabel>
    <relationshipName>New_Tickets</relationshipName>
    <type>Lookup</type>
</CustomField>