force-app/main/default/objects/Ticket__c/fields/ResponsibleDepartment__c.field-meta.xml
<CustomField>
    <fullName>ResponsibleDepartment__c</fullName>
    <label>Responsible Department</label>
    <length>255</length>
    <type>Text</type>
</CustomField>