force-app/main/default/objects/Ticket__c/fields/ResponsibleDepartmentUserIds__c.field-meta.xml
<CustomField>
    <fullName>ResponsibleDepartmentUserIds__c</fullName>
    <label>Responsible Department User Ids</label>
    <length>255</length>
    <type>Text</type>
</CustomField>