force-app/main/default/objects/Ticket__c/fields/SalesRegion__c.field-meta.xml
<CustomField>
    <fullName>SalesRegion__c</fullName>
    <description>创建工单的用户的Sales Region</description>
    <formula>TEXT( CreatedBy.Sales_Region__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Region</label>
    <type>Text</type>
</CustomField>