force-app/main/default/objects/Ticket__c/fields/SeriesNum__c.field-meta.xml
<CustomField>
    <fullName>SeriesNum__c</fullName>
    <label>Series Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>