force-app/main/default/objects/Ticket__c/fields/Solver_Name__c.field-meta.xml
<CustomField>
    <fullName>Solver_Name__c</fullName>
    <description>解决人</description>
    <label>Solver Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>