force-app/main/default/objects/Ticket__c/fields/Store_Id__c.field-meta.xml
<CustomField>
    <fullName>Store_Id__c</fullName>
    <formula>IF( NOT( ISBLANK( PromoterDailyReport__c ) ),
PromoterDailyReport__r.Shop__c ,
IF( NOT(ISBLANK( InspectionReport__c ) ),
InspectionReport__r.Store__c ,
&apos;&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Store Id</label>
    <type>Text</type>
</CustomField>