force-app/main/default/objects/Ticket__c/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <description>工单主题</description>
    <label>Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>