force-app/main/default/objects/Ticket__c/fields/SubjectCN__c.field-meta.xml
<CustomField>
    <fullName>SubjectCN__c</fullName>
    <label>Subject CN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>