force-app/main/default/objects/Ticket__c/fields/Submitter_Name__c.field-meta.xml
<CustomField>
    <fullName>Submitter_Name__c</fullName>
    <description>提交人</description>
    <label>Submitter Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>