force-app/main/default/objects/Ticket__c/fields/SystemGeneration__c.field-meta.xml
<CustomField>
    <fullName>SystemGeneration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>System Generation</label>
    <type>Checkbox</type>
</CustomField>