force-app/main/default/objects/Ticket__c/fields/Ticket_Priority__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Priority__c</fullName>
    <formula>CASE( Priority__c , 
&apos;Low&apos;, &apos;Low&apos;, 
&apos;Normal&apos;, &apos;Mid&apos;,
&apos;High&apos;, &apos;High&apos;,
&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ticket Priority</label>
    <type>Text</type>
</CustomField>