force-app/main/default/objects/Ticket__c/recordTypes/Floorwalker.recordType-meta.xml
<RecordType>
    <fullName>Floorwalker</fullName>
    <active>true</active>
    <label>Floorwalker</label>
</RecordType>