force-app/main/default/objects/Ticket__c/recordTypes/Promoter.recordType-meta.xml
<RecordType>
    <fullName>Promoter</fullName>
    <active>true</active>
    <label>Promoter</label>
</RecordType>