force-app/main/default/objects/Ticket__c/validationRules/Due_Date_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Due_Date_Check</fullName>
    <active>true</active>
    <errorConditionFormula>IF( OR( ISNEW() ,  ISCHANGED( DueDate__c ) ), 
 DueDate__c &lt;  TODAY() , false)</errorConditionFormula>
    <errorMessage>due date cannot be a past date!</errorMessage>
</ValidationRule>