force-app/main/default/objects/Ticket__c/validationRules/Edit_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Edit_Check</fullName>
    <active>false</active>
    <description>创建之后就不能修改状态及分配人以外字段</description>
    <errorConditionFormula>IF( ISBLANK(PRIORVALUE( DueDate__c )), false,
OR(ISCHANGED( Subject__c ),
ISCHANGED( Description__c ),
ISCHANGED( Priority__c ),
ISCHANGED( DueDate__c )))</errorConditionFormula>
    <errorMessage>You can only modify the ticket status and Assigned To after the task has been submitted!</errorMessage>
</ValidationRule>