force-app/main/default/objects/Ticket__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Sales_Region__c</columns>
    <columns>NAME</columns>
    <columns>Store__c</columns>
    <columns>Subject__c</columns>
    <columns>Description__c</columns>
    <columns>Status__c</columns>
    <columns>DueDate__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>AssignedTo__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>InspectionReport__c</columns>
    <columns>SystemGeneration__c</columns>
    <columns>Newest_Feedback__c</columns>
    <columns>Histories_Feedback__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>