force-app/main/default/objects/Ticket__c/listViews/Closed_Tickets.listView-meta.xml
<ListView>
    <fullName>Closed_Tickets</fullName>
    <columns>Sales_Region__c</columns>
    <columns>NAME</columns>
    <columns>Store__c</columns>
    <columns>Subject__c</columns>
    <columns>Description__c</columns>
    <columns>Status__c</columns>
    <columns>DueDate__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>AssignedTo__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>InspectionReport__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>isMine__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Open</value>
    </filters>
    <label>Closed Tickets</label>
</ListView>