force-app/main/default/objects/Ticket__c/listViews/Mexico.listView-meta.xml
<ListView>
    <fullName>Mexico</fullName>
    <columns>SalesRegion__c</columns>
    <columns>NAME</columns>
    <columns>Store__c</columns>
    <columns>Subject__c</columns>
    <columns>Description__c</columns>
    <columns>Status__c</columns>
    <columns>DueDate__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>AssignedTo__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>InspectionReport__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SalesRegion__c</field>
        <operation>equals</operation>
        <value>Hisense Mexico</value>
    </filters>
    <label>Mexico</label>
</ListView>