force-app/main/default/objects/Ticket__c/listViews/South_Africa_Open_Tickets_Default.listView-meta.xml
<ListView>
    <fullName>South_Africa_Open_Tickets_Default</fullName>
    <columns>NAME</columns>
    <columns>AssignedTo__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>DueDate__c</columns>
    <columns>Description__c</columns>
    <columns>InspectionReport__c</columns>
    <columns>Sales_Region__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Sales_Region__c</field>
        <operation>equals</operation>
        <value>Hisense South Africa</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Open</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Ticket__c.Default</value>
    </filters>
    <label>South Africa Open Tickets(Default)</label>
    <sharedTo>
        <roleAndSubordinatesInternal>South_Africa_GM</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>